--- a/Analysis/Case_Study.Rmd
+++ b/Analysis/Case_Study.Rmd
@@ -18,7 +18,7 @@ library(dplyr)
 library(ggsignif)
 library(hillR)
 # devtools::install_github("bioscinema/WasserSpectrum")
-library(spectrumTest)
+library(WasserSpectrum)
 ```
 
 
