Update package and case study

--- a/Analysis/Case_Study.Rmd
+++ b/Analysis/Case_Study.Rmd
@@ -481,7 +481,8 @@ HbA1c.ws3 <- wasserstein_spectrum(
 ```{r, warning=FALSE}
 shannon_by_status <- list()
 meta_by_status <- list()
-
+status_levels = c("HC", "IHD")
+variable <- "ANP"
 for (st in status_levels) {
   # Subset phyloseq first
   ps_sub <- subset_samples(ps_filt, Status == st)
@@ -501,7 +502,8 @@ for (st in status_levels) {
 }
 
 
-ws_list <- lapply(meta_by_status, function(df_sub) {
+ws_list <- lapply(names(meta_by_status), function(st) {
+  df_sub <- meta_by_status[[st]]
   HbA1c.ws <- wasserstein_spectrum(
   df = df_sub, 
   feature_col = "Shannon", 
@@ -541,6 +543,16 @@ HbA1c.ws3 <- wasserstein_spectrum(
   plot = TRUE,
   seed = 123
 )
+print(HbA1c.ws3$lollipop_plot)
+fig_path <- paste0("figures/", st, "_", variable, ".eps")
+ggsave(
+  filename = fig_path,
+  plot = HbA1c.ws3$lollipop_plot,
+  device = cairo_ps,
+  width = 7,
+  height = 5,
+  fallback_resolution = 600
+)
 })
 
 
@@ -550,7 +562,8 @@ HbA1c.ws3 <- wasserstein_spectrum(
 ```{r, warning=FALSE}
 shannon_by_status <- list()
 meta_by_status <- list()
-
+status_levels = c("HC", "IHD")
+variable <- "SBP"
 for (st in status_levels) {
   # Subset phyloseq first
   ps_sub <- subset_samples(ps_filt, Status == st)
@@ -570,7 +583,8 @@ for (st in status_levels) {
 }
 
 
-ws_list <- lapply(meta_by_status, function(df_sub) {
+ws_list <- lapply(names(meta_by_status), function(st) {
+  df_sub <- meta_by_status[[st]]
   HbA1c.ws <- wasserstein_spectrum(
   df = df_sub, 
   feature_col = "Shannon", 
@@ -610,6 +624,16 @@ HbA1c.ws3 <- wasserstein_spectrum(
   plot = TRUE,
   seed = 123
 )
+print(HbA1c.ws3$lollipop_plot)
+fig_path <- paste0("figures/", st, "_", variable, ".eps")
+ggsave(
+  filename = fig_path,
+  plot = HbA1c.ws3$lollipop_plot,
+  device = cairo_ps,
+  width = 7,
+  height = 5,
+  fallback_resolution = 600
+)
 })
 
 
@@ -620,7 +644,8 @@ HbA1c.ws3 <- wasserstein_spectrum(
 ```{r, warning=FALSE}
 shannon_by_status <- list()
 meta_by_status <- list()
-
+status_levels = c("HC", "IHD")
+variable <- "DBP"
 for (st in status_levels) {
   # Subset phyloseq first
   ps_sub <- subset_samples(ps_filt, Status == st)
@@ -640,7 +665,8 @@ for (st in status_levels) {
 }
 
 
-ws_list <- lapply(meta_by_status, function(df_sub) {
+ws_list <- lapply(names(meta_by_status), function(st) {
+  df_sub <- meta_by_status[[st]]
   HbA1c.ws <- wasserstein_spectrum(
   df = df_sub, 
   feature_col = "Shannon", 
@@ -680,6 +706,16 @@ HbA1c.ws3 <- wasserstein_spectrum(
   plot = TRUE,
   seed = 123
 )
+print(HbA1c.ws3$lollipop_plot)
+fig_path <- paste0("figures/", st, "_", variable, ".eps")
+ggsave(
+  filename = fig_path,
+  plot = HbA1c.ws3$lollipop_plot,
+  device = cairo_ps,
+  width = 7,
+  height = 5,
+  fallback_resolution = 600
+)
 })
 
 ```
@@ -688,7 +724,8 @@ HbA1c.ws3 <- wasserstein_spectrum(
 ```{r, warning=FALSE}
 shannon_by_status <- list()
 meta_by_status <- list()
-
+status_levels = c("HC", "IHD")
+variable <- "LVEF"
 for (st in status_levels) {
   # Subset phyloseq first
   ps_sub <- subset_samples(ps_filt, Status == st)
@@ -708,7 +745,8 @@ for (st in status_levels) {
 }
 
 
-ws_list <- lapply(meta_by_status, function(df_sub) {
+ws_list <- lapply(names(meta_by_status), function(st) {
+  df_sub <- meta_by_status[[st]]
   HbA1c.ws <- wasserstein_spectrum(
   df = df_sub, 
   feature_col = "Shannon", 
@@ -747,6 +785,16 @@ HbA1c.ws3 <- wasserstein_spectrum(
   alpha = 0.05,
   plot = TRUE,
   seed = 123
+)
+print(HbA1c.ws3$lollipop_plot)
+fig_path <- paste0("figures/", st, "_", variable, ".eps")
+ggsave(
+  filename = fig_path,
+  plot = HbA1c.ws3$lollipop_plot,
+  device = cairo_ps,
+  width = 7,
+  height = 5,
+  fallback_resolution = 600
 )
 })
 
